// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationItem /> Should render correctly 1`] = `
<div>
  <a
    class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE"
    href="/test"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-ftvSup ePJXaK"
        >
          <div
            class="sc-papXJ diveQv date container"
          />
          <div
            class="sc-jqUVSM elkaFX"
          >
            <h1
              class="sc-hAZoDl eNenGa"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE"
    href="https://duckduckgo.com/"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-ftvSup ePJXaK"
        >
          <div
            class="sc-papXJ diveQv date container"
          />
          <div
            class="sc-jqUVSM elkaFX"
          >
            <h1
              class="sc-hAZoDl eNenGa"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly with custom className 1`] = `
<div>
  <a
    class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE test-custom-classname"
    href="/test"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-ftvSup ePJXaK"
        >
          <div
            class="sc-papXJ diveQv date container"
          />
          <div
            class="sc-jqUVSM elkaFX"
          >
            <h1
              class="sc-hAZoDl eNenGa"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render with nextified href 1`] = `
<div>
  <a
    class="sc-gsnTZi hvFSuA sc-iBkjds lehxXE"
    href="/blog/test"
  >
    <div
      class="sc-dkzDqf hkFiab"
    >
      <div
        class="sc-hKMtZM kvlGVY"
      />
      <div
        class="sc-eCYdqJ heBWoi"
      >
        <div
          aria-hidden="true"
          class="sc-ftvSup ePJXaK"
        >
          <div
            class="sc-papXJ diveQv date container"
          />
          <div
            class="sc-jqUVSM elkaFX"
          >
            <h1
              class="sc-hAZoDl eNenGa"
            />
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
